Remove Paths usage